improve(breadcrumb): fix alignment to container

--- a/less/site.less
+++ b/less/site.less
@@ -56,8 +56,6 @@ section.breadcrumb-bar {
 
     .breadcrumb {
         margin: 0;
-        padding-left: 0;
-        padding-right: 0;
 
         .label-list {
             display: inline-block;
